@@ -7,7 +7,7 @@
 
 namespace torrent {
 
-int Rate::rate(bool quick) {
+unsigned int Rate::rate() {
   while (!m_entries.empty() &&
 	 m_entries.back().first + Settings::rateWindow < Timer::cache()) {
     m_new = false;
@@ -15,10 +15,6 @@ int Rate::rate(bool quick) {
   }
   
   if (m_entries.empty())
-    return 0;
-
-  if (quick &&
-      m_entries.front().first + Settings::rateQuick < Timer::cache())
     return 0;
 
   int64_t window = m_new ?
@@ -34,6 +30,36 @@ int Rate::rate(bool quick) {
     bytes += itr->second;
 
   return (bytes * 1000000) / window;
+}
+
+unsigned int Rate::rate_quick() {
+  if (m_entries.empty())
+    return 0;
+
+  Timer window = Timer::cache() - Settings::rateQuick;
+  int64_t bytes = 0;
+
+  for (std::deque<std::pair<Timer, int> >::const_iterator itr = m_entries.begin();
+       itr->first >= window && itr != m_entries.end(); ++itr)
+    bytes += itr->second;
+
+  return (bytes * 1000000) / Settings::rateQuick;
+}
+
+void Rate::add(unsigned int bytes) {
+  // We don't need to clean up old entries here since bytes() is called
+  // every 30 seconds by Download::CHOKE_CYCLE.
+  m_bytes += bytes;
+
+  if (m_entries.empty())
+    m_new = true;
+
+  if (!m_entries.empty() &&
+      (Timer::cache().usec() / Settings::rateSample) == (m_entries.front().first.usec() / Settings::rateSample))
+    m_entries.front().second += bytes;
+    
+  else
+    m_entries.push_front(std::make_pair(Timer::cache(), bytes));
 }
 
 }
